 - Fixed the position of the Bug Meter popup menu.
 - Hooked vertical scrolling to the mouse wheel.
 - Reimplemented plain.cc using a class, and hooked memory-release.
 - Reimplemented html.cc using a class, removed the linkblock,
   and hooked memory-release to dw destruction.
 - Switched UI shortcuts from a global event handler to UI::handle.
 - Bound Ctrl+Space to fullscreen toggle.
   Patches: Jorge Arellano
+- Connected signals to <li> elements (fixes links within lists).
 - Enabled text, background-color and geometry in preferences.
 - Enabled clicking over image links.
 - Improved notification upon leaving links.
 - Implemented image-link URL showing in status bar.
 - Added missing size-parsing for the <hr> element.
 - Hooked "Activate" to the form_receiver.
 - Connected the plain page context menu.
 - Added code for the image menu and hooked it to dw2 signals.
 - Hooked the page and link menus.
 - Added a image-loading toggle button to the UI.
 - Enabled hiding widgets of the control panel from dillorc2.
 - Added a save-directory preference (save_dir in dillorc2).
 - Fixed page-popup-menu to use the stack's top URL instead of base_url.
 - Added the "static" qualifier where missing.
 - Bound "Copy link location".
 - Bound preliminar find text support.
 - Added line numbers and enabled wrapping in the "View Source" window.
   Patches: place
+- Fixed a problem with locally-installed dpis.
 - Added code for optional image loading (nice interface) very advanced!
 - Added an experimental gzip decoder! 
 - Implemented "Load Images" in the page menu and cleaned up html.hh.
 - Added shortcuts: PgDn=Spc PgUp=b Back=BackSpace|, Forw=Shift+Backspace|.
   Patch: place, Jorge Arellano
+- Fixed a va_list-related SEGFAULT on 64bit-arch in dStr_vsprintfa().
   Added const declarations in html parser.
   Patch: Vincent Thomasset
+- Fixed void to int conversions for 64bit-arch.
   Patch: Jorge Arellano, higuita
+- Added a strndup() replacement in dw2