@@ -40,8 +40,9 @@ dillo-fltk2
  - Reimplemented html.cc using a class, removed the linkblock,
    and hooked memory-release to dw destruction.
  - Switched UI shortcuts from a global event handler to UI::handle.
- - Bound Ctrl+Space to fullscreen toggle.
-   Patches: Jorge Arellano
+ - Bound Ctrl+Space to toggle fullscreen mode.
+ - Switched dillo to push a URL with fragment (anchor) into the stack.
+   Patches: Jorge Arellano Cid
 +- Connected signals to <li> elements (fixes links within lists).
  - Enabled text, background-color and geometry in preferences.
  - Enabled clicking over image links.
